Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-8742

ScannerContext::eosr() should depends on scan_range->bytes_to_read() instead of scan_range->len()

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • Impala 3.2.0
    • Impala 3.4.0
    • Backend
    • None
    • ghx-label-4

    Description

      Normally, scan_range->len() equals to scan_range->bytes_to_read().

      But when SubRanges exists, only bytes_to_read was updated, ScannerContext::GetBuffer would read entire scan_range->len() bytes, and I think it would be a bug.

      Attachments

        Issue Links

          Activity

            People

              boroknagyz Zoltán Borók-Nagy
              wangchen1ren Chen Wang
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: